--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -22,6 +22,10 @@
             appRoot: "{{{appRoot}}}",
             apiRoot: localStorage.getItem("apiRootOverride") || "{{{apiRoot}}}",
             title: "{{{title}}}",
+            hideNewDeployButton: {{{hideNewDeployButton}}},
+            hideNewRequestButton: {{{hideNewRequestButton}}},
+            defaultCpus: {{{defaultCpus}}},
+            defaultMemory: {{{defaultMemory}}},
             slaveHttpPort: {{{slaveHttpPort}}},
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}}
