--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -27,11 +27,11 @@
             <div class="row">
                 <div class="col-sm-4 form-group">
                     <label for="cpus">CPUs</label>
-                    <input type="text" id="cpus" placeholder="default: 1" class="form-control">
+                    <input type="text" id="cpus" placeholder="default: {{config.defaultCpus}}" class="form-control">
                 </div>
                 <div class="col-sm-4 form-group">
                     <label for="memory-mb">Memory (MB)</label>
-                    <input type="text" id="memory-mb" placeholder="default: 128" class="form-control">
+                    <input type="text" id="memory-mb" placeholder="default: {{config.defaultMemory}}" class="form-control">
                 </div>
                 <div class="col-sm-4 form-group">
                     <label for="num-ports">Num. ports</label>
