--- a/SingularityUI/app/templates/requestDetail/requestHeader.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHeader.hbs
@@ -26,9 +26,11 @@
                 JSON
             </a>
 
+            {{#unless config.hideNewDeployButton}}
             <a href="{{appRoot}}/request/{{data.id}}/deploy" class="btn btn-success">
                 Deploy
             </a>
+            {{/unless}}
 
             {{#if data.canBeRunNow}}
                 {{#unless data.deleted}}
@@ -75,7 +77,6 @@
                 {{#if timestamp}}
                     &mdash;
                     {{timestampFromNow timestamp}}
-                    ({{timestampFormatted timestamp}})
                 {{/if}}
             {{/with}}
         {{else}}
