--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -9,108 +9,6 @@
             <input type="text" id="id" class="form-control">
         </div>
 
-        <div class="form-group required">
-            <label for="command">Command to execute</label>
-            <input type="text" id="command" class="form-control" placeholder="eg: rm -rf /">
-        </div>
-
-        {{#if model.request.loadBalanced}}
-            <div class="form-group required">
-                <label for="service-base-path">Service base path</label>
-                <input type="text" id="service-base-path" class="form-control" placeholder="eg: /singularity/api/v2">
-            </div>
-        {{/if}}
-
-        <fieldset>
-            <h4>Resources</h4>
-
-            <div class="row">
-                <div class="col-sm-4 form-group">
-                    <label for="cpus">CPUs</label>
-                    <input type="text" id="cpus" placeholder="default: {{config.defaultCpus}}" class="form-control">
-                </div>
-                <div class="col-sm-4 form-group">
-                    <label for="memory-mb">Memory (MB)</label>
-                    <input type="text" id="memory-mb" placeholder="default: {{config.defaultMemory}}" class="form-control">
-                </div>
-                <div class="col-sm-4 form-group">
-                    <label for="num-ports">Num. ports</label>
-                    <input type="text" id="num-ports" class="form-control" placeholder="default: 0">
-                </div>
-            </div>
-        </fieldset>
-
-        {{#if model.daemon}}
-            <fieldset>
-                <h4>Healthcheck</h4>
-                <div class="form-group">
-                    <label for="healthcheck-uri">Healthcheck URI</label>
-                    <input type="text" id="healthcheck-uri" class="form-control">
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="healthcheck-interval">HC interval (sec)</label>
-                            <input type="text" id="healthcheck-interval" class="form-control" placeholder="default: 5">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="healthcheck-timeout">HC timeout (sec)</label>
-                            <input type="text" id="healthcheck-timeout" class="form-control" placeholder="default: 5">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="consider-healthy-after">Healthy after (sec)</label>
-                            <input type="text" id="consider-healthy-after" class="form-control" placeholder="default: 5">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="skip-healthcheck">
-                                <input type="checkbox" id="skip-healthcheck">
-                                Skip healthcheck on deploy
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="deploy-healthcheck-timeout">Deploy healthcheck timeout (sec)</label>
-                            <input type="text" id="deploy-healthcheck-timeout" class="form-control" placeholder="default: 120">
-                        </div>
-                    </div>
-                </div>
-            </fieldset>
-
-            <fieldset>
-                <h4>Load balancer</h4>
-
-                <div class="form-group {{#if model.request.loadBalanced}}required{{/if}}">
-                    <label>Load balancer groups</label>
-                    <div class="multi-input">
-                        <input type="text" class="form-control lb-group">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>Load balancer options</label>
-                    <div class="multi-input">
-                        <input type="text" class="form-control lb-option" placeholder="format: key=value">
-                    </div>
-                </div>
-            </fieldset>
-        {{/if}}
-
-        <fieldset>
-            <label>Environment variables</label>
-
-            <div class="multi-input">
-                <input type="text" class="form-control env" placeholder="format: key=value">
-            </div>
-        </fieldset>
-
         <fieldset>
             <div class="form-group">
                 <label>Executor type</label>
@@ -122,13 +20,21 @@
                         </button>
                         <button class="btn btn-default" data-executor="custom">
                             Custom
+                        </button> 
+                        <button class="btn btn-default" data-executor="container">
+                            Docker
                         </button>
                     </div>
                 </div>
             </div>
         </fieldset>
-
+        
         <fieldset id="default-expandable" class='expandable'>
+            <div class="form-group required">
+              <label for="command">Command to execute</label>
+              <input type="text" id="command" class="form-control" placeholder="eg: rm -rf /">
+            </div>
+        
             <label>Artifacts</label>
 
             <div class="multi-input">
@@ -214,6 +120,113 @@
                 </div>
             </fieldset>
         </div>
+          
+        <fieldset id="container-expandable" class='expandable hide'>
+            <div class="form-group required">
+              <label for="docker">Docker image</label>
+              <input type="text" id="docker" class="form-control" placeholder="eg: registry.hub.docker.com/centos/centos6:latest">
+            </div>
+        
+        </fieldset>
+        
+        {{#if model.request.loadBalanced}}
+            <div class="form-group required">
+                <label for="service-base-path">Service base path</label>
+                <input type="text" id="service-base-path" class="form-control" placeholder="eg: /singularity/api/v2">
+            </div>
+        {{/if}}
+
+        <fieldset>
+            <h4>Resources</h4>
+
+            <div class="row">
+                <div class="col-sm-4 form-group">
+                    <label for="cpus">CPUs</label>
+                    <input type="text" id="cpus" placeholder="default: {{config.defaultCpus}}" class="form-control">
+                </div>
+                <div class="col-sm-4 form-group">
+                    <label for="memory-mb">Memory (MB)</label>
+                    <input type="text" id="memory-mb" placeholder="default: {{config.defaultMemory}}" class="form-control">
+                </div>
+                <div class="col-sm-4 form-group">
+                    <label for="num-ports">Num. ports</label>
+                    <input type="text" id="num-ports" class="form-control" placeholder="default: 0">
+                </div>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <label>Environment variables</label>
+
+            <div class="multi-input">
+                <input type="text" class="form-control env" placeholder="format: key=value">
+            </div>
+        </fieldset>
+        
+        {{#if model.daemon}}
+            <h3>Advanced</h3>
+        
+            <fieldset>
+                <h4>Healthcheck</h4>
+                <div class="form-group">
+                    <label for="healthcheck-uri">Healthcheck URI</label>
+                    <input type="text" id="healthcheck-uri" class="form-control">
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="healthcheck-interval">HC interval (sec)</label>
+                            <input type="text" id="healthcheck-interval" class="form-control" placeholder="default: 5">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="healthcheck-timeout">HC timeout (sec)</label>
+                            <input type="text" id="healthcheck-timeout" class="form-control" placeholder="default: 5">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="consider-healthy-after">Healthy after (sec)</label>
+                            <input type="text" id="consider-healthy-after" class="form-control" placeholder="default: 5">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="skip-healthcheck">
+                                <input type="checkbox" id="skip-healthcheck">
+                                Skip healthcheck on deploy
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="deploy-healthcheck-timeout">Deploy healthcheck timeout (sec)</label>
+                            <input type="text" id="deploy-healthcheck-timeout" class="form-control" placeholder="default: 120">
+                        </div>
+                    </div>
+                </div>
+            </fieldset>
+
+            <fieldset>
+                <h4>Load balancer</h4>
+
+                <div class="form-group {{#if model.request.loadBalanced}}required{{/if}}">
+                    <label>Load balancer groups</label>
+                    <div class="multi-input">
+                        <input type="text" class="form-control lb-group">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Load balancer options</label>
+                    <div class="multi-input">
+                        <input type="text" class="form-control lb-option" placeholder="format: key=value">
+                    </div>
+                </div>
+            </fieldset>
+        {{/if}}
 
         <div id="button-row">
             <span>
