make labels not selectable

--- a/SingularityUI/app/styles/newForm.styl
+++ b/SingularityUI/app/styles/newForm.styl
@@ -1,3 +1,4 @@
+@import nib
 @import colors
 
 .new-form
@@ -44,6 +45,14 @@
         span
             display inline-block
 
+.form-group 
+    
+    label
+        -webkit-user-select none
+        -moz-user-select none
+        -ms-user-select none
+        user-select none
+                
 .multi-input
     
     input
