Embed API docs in Singularity

--- a/SingularityUI/app/templates/nav.hbs
+++ b/SingularityUI/app/templates/nav.hbs
@@ -34,6 +34,9 @@
                     </ul>
                 </li>
                 <li>
+                    <a target="_blank" href="{{appRoot}}/api-docs/">API Docs</a>
+                </li>
+                <li>
                     <a class='global-search-button'>
                         <span class="glyphicon glyphicon-search"></span>
                         <span class="icon-search-adjacent-text">Search</span>
