--- a/SingularityUI/app/templates/requestDetail/requestHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistory.hbs
@@ -24,7 +24,7 @@
                 {{#each data}}
                     <tr data-id="{{ createdAt }}" data-collection="requestHistory">
                         <td>
-                            {{humanizeText state}}
+                            {{humanizeText eventType}}
                         </td>
                         <td>
                             {{usernameFromEmail user}}
