Rework singularity UI locations
- move singularity UI away from the root resource to /ui location.
  This allows other resources to claim the root URI or add other endpoints
  based off the root URI

- Add a new flag in the ui section: redirectRootToUi: true / false

  If true, accessing the root URI of Singularity will redirect to the
  UI. If false, no redirection will happen (and whatever other
  resource is configured for / will kick in. By default this is 404
  (not found).

- move static and api-doc resources to /assets subfolder (removes the
  weird /static/static references)

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -20,6 +20,7 @@
     <script>
         window.config = {
             appRoot: "{{{appRoot}}}",
+            apiDocs: "{{{apiDocs}}}",
             apiRoot: localStorage.getItem("apiRootOverride") || "{{{apiRoot}}}",
             title: "{{{title}}}",
             hideNewDeployButton: {{{hideNewDeployButton}}},
