--- a/SingularityUI/app/templates/nav.hbs
+++ b/SingularityUI/app/templates/nav.hbs
@@ -34,7 +34,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a target="_blank" href="{{appRoot}}/api-docs/">API Docs</a>
+                    <a target="_blank" href="{{apiDocs}}/">API Docs (beta)</a>
                 </li>
                 <li>
                     <a class='global-search-button'>
