--- a/SingularityUI/app/templates/tail.hbs
+++ b/SingularityUI/app/templates/tail.hbs
@@ -33,6 +33,15 @@
     <span>Tailing</span>
 </div>
 
-<div class="tail-contents">
 
+<div class="tail-contents">
+    <div class="tail-fetching-start">
+        fetching more log lines...
+    </div>
+    <div class="lines-wrapper"></div>
+
+    <div class="tail-fetching-end">
+        fetching more log lines...
+    </div>
 </div>
+
