Oh yeah, this might not always be a log file

--- a/SingularityUI/app/templates/tail.hbs
+++ b/SingularityUI/app/templates/tail.hbs
@@ -36,12 +36,12 @@
 
 <div class="tail-contents">
     <div class="tail-fetching-start">
-        fetching more log lines...
+        fetching more lines...
     </div>
     <div class="lines-wrapper"></div>
 
     <div class="tail-fetching-end">
-        fetching more log lines...
+        fetching more lines...
     </div>
 </div>
 
