Add spinner to “fetching more lines”

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -60,8 +60,14 @@
     display: none
     text-align center
     font-size 1.5em
-    padding 1em 2em
+    padding .8em 1.5em
     color #AAA
+    font-weight: 200
+
+    .page-loader
+        display inline-block
+        margin-left 1em
+        opacity .5
 
 
 // States
