Clean up typeahead search styles.
  - More opaque background
  - Results are full width, have pointer cursor, and even padding
  - Don’t hide the search UI if you click inside the input

--- a/SingularityUI/app/styles/globalSearch.styl
+++ b/SingularityUI/app/styles/globalSearch.styl
@@ -11,7 +11,7 @@
     left 0
     bottom 0
     right 0
-    background rgba(255, 255, 255, .9)
+    background rgba(255, 255, 255, .98)
 
     .close-button-container
         margin 20px 0 50px
@@ -44,8 +44,15 @@
             display block !important
             width 100%
 
+        .tt-dropdown-menu
+            right: 0px !important
+
         .tt-suggestion
-            padding 15px 10px
+            padding 10px
+            cursor: pointer
+
+            p
+                margin-bottom: 0
 
             &.tt-cursor
                 background rgba(0, 0, 0, .03)
