--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -94,6 +94,15 @@
             </div>
         </div>
 
+        <div id="on-demand-expandable" class="expandable hide">
+            <div class="form-group">
+                <label for="schedule-immediately-on-demand">
+                    <input type="checkbox" id="schedule-immediately-on-demand">
+                    Schedule on-demand task immediately after deploy
+                </label>
+            </div>
+        </div>
+
         <div id="button-row">
             <span>
                 <button type="submit" class="btn btn-success btn-lg" disabled>
