support more fields on docker deploy form

--- a/SingularityUI/app/styles/newForm.styl
+++ b/SingularityUI/app/styles/newForm.styl
@@ -91,7 +91,7 @@
 #artifact-button-row button
     margin-bottom 5px
 
-.artifact
+.artifact, .docker-port
     position relative
 
     .remove-button
