ui changes for new rack/slave updates

--- a/SingularityUI/app/templates/racks/base.hbs
+++ b/SingularityUI/app/templates/racks/base.hbs
@@ -3,15 +3,15 @@
 </header>
 
 <div class="row">
+    <h1>Active</h1>
     <div id="active" class="col-md-12">
-        
     </div>
 
-    <div id="decomissioning" class="col-md-12">
-        
+    <h1>Decommissioning</h1>
+    <div id="decommissioning" class="col-md-12">
     </div>
 
-    <div id="dead" class="col-md-12">
-        
+    <h1>Inactive</h1>
+    <div id="inactive-racks" class="col-md-12">
     </div>
 </div>
