--- a/SingularityUI/app/templates/slaves/base.hbs
+++ b/SingularityUI/app/templates/slaves/base.hbs
@@ -2,16 +2,16 @@
     <h1>Slaves</h1>
 </header>
 
-<div class="row">
+<div class='row'>
+    <h1>Active</h1>
     <div id="active" class="col-md-12">
-        
     </div>
 
-    <div id="decomissioning" class="col-md-12">
-        
+    <h1>Decommissioning</h1>
+    <div id="decommissioning" class="col-md-12">
     </div>
 
-    <div id="dead" class="col-md-12">
-        
+    <h1>Inactive</h1>
+    <div id="inactive" class="col-md-12">
     </div>
 </div>
