--- a/SingularityUI/app/templates/slaves/base.hbs
+++ b/SingularityUI/app/templates/slaves/base.hbs
@@ -3,15 +3,6 @@
 </header>
 
 <div class='row'>
-    <h1>Active</h1>
-    <div id="active" class="col-md-12">
-    </div>
-
-    <h1>Decommissioning</h1>
-    <div id="decommissioning" class="col-md-12">
-    </div>
-
-    <h1>Inactive</h1>
-    <div id="inactive" class="col-md-12">
+    <div id="slaves" class="col-md-12">
     </div>
 </div>
