--- a/SingularityUI/app/templates/racks/base.hbs
+++ b/SingularityUI/app/templates/racks/base.hbs
@@ -2,6 +2,10 @@
     <h1>Racks</h1>
 </header>
 <div class="row">
-    <div id="racks" class="col-md-12">
-    </div>
+    <h1>Active</h1>
+    <div id="active" class="col-md-12"></div>
+    <h1>Decommissioning</h1>
+    <div id="decommission" class="col-md-12"></div>
+    <h1>Inactive</h1>
+    <div id="inactive" class="col-md-12"></div>
 </div>
