--- a/SingularityUI/app/templates/slaves/base.hbs
+++ b/SingularityUI/app/templates/slaves/base.hbs
@@ -1,8 +1,11 @@
 <header>
     <h1>Slaves</h1>
 </header>
-
-<div class='row'>
-    <div id="slaves" class="col-md-12">
-    </div>
+<div class="row">
+    <h1>Active</h1>
+    <div id="active" class="col-md-12"></div>
+    <h1>Decommissioning</h1>
+    <div id="decommission" class="col-md-12"></div>
+    <h1>Inactive</h1>
+    <div id="inactive" class="col-md-12"></div>
 </div>
