--- a/SingularityUI/app/templates/racks/base.hbs
+++ b/SingularityUI/app/templates/racks/base.hbs
@@ -1,11 +1,13 @@
 <header>
     <h1>Racks</h1>
 </header>
-<div class="row">
-    <h1>Active</h1>
-    <div id="active" class="col-md-12"></div>
-    <h1>Decommissioning</h1>
-    <div id="decommission" class="col-md-12"></div>
-    <h1>Inactive</h1>
-    <div id="inactive" class="col-md-12"></div>
+<div class='col-md-12'>
+    <div class="row">
+        <h1>Active</h1>
+        <div id="active" class="col-md-12"></div>
+        <h1>Decommissioning</h1>
+        <div id="decommission" class="col-md-12"></div>
+        <h1>Inactive</h1>
+        <div id="inactive" class="col-md-12"></div>
+    </div>
 </div>
