--- a/SingularityUI/app/templates/racks/rack.hbs
+++ b/SingularityUI/app/templates/racks/rack.hbs
@@ -6,7 +6,10 @@
                 <th>Current State</th>
                 <th>Uptime</th>
                 {{#ifInSubFilter data.[0].state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
-                    <th>Triggered By</th>
+                    <th>Decommissioned By</th>
+                {{/ifInSubFilter}}
+                {{#ifInSubFilter data.[0].state 'ACTIVE'}}
+                    <th>Activated By</th>
                 {{/ifInSubFilter}}
                 <th data-sortable="false"></th>
             </tr>
@@ -17,7 +20,7 @@
                     <td>{{ id }}</td>
                     <td>{{ state }}</td>
                     <td data-value="{{ uptime }}">{{timestampDuration uptime}}</td>
-                    {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
+                    {{#ifInSubFilter state 'ACTIVE,DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
                         <td>{{ user }}</td>
                     {{/ifInSubFilter}}
                     <td class="actions-column">
