add vex dialog explaining quartz schedule format

--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -25,6 +25,9 @@
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
                         <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
+                            <a data-action="show-quartz" title="Quartz Schedules">
+                                <span class='glyphicon glyphicon-question-sign'></span>
+                            </a>
                         </th>
                     {{/ifInSubFilter}}
 
@@ -60,7 +63,7 @@
                         <td class="hidden-xs">
                             {{timestampFromNow requestDeployState.activeDeploy.timestamp}}
                         </td>
-                        
+
                         {{#ifInSubFilter 'scheduled' ../requestsSubFilter}}
                             <td class="visible-lg visible-xl">
                                 {{ request.schedule }}
