--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -24,11 +24,15 @@
                     <th data-sort-attribute="requestDeployState.activeDeploy.timestamp" class="hidden-xs">
                         Deploy time
                     </th>
-                    
+
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
                         <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
+                            <a data-action="show-quartz" title="Quartz Schedules">
+                                <span class='glyphicon glyphicon-question-sign'></span>
+                            </a>
                         </th>
+
                     {{/ifInSubFilter}}
 
                     <th class="hidden-xs">
