--- a/SingularityUI/app/templates/requestsTable/requestsFilter.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsFilter.hbs
@@ -16,6 +16,9 @@
             <span class="glyphicon glyphicon-ok"></span>
             Scheduled
         </a>
+        <a data-action="show-quartz" title="Quartz Schedules">
+            <span class='glyphicon glyphicon-question-sign'></span>
+        </a>
     </li>
 </ul>
 
