--- a/SingularityUI/app/templates/requestsTable/requestsCooldownBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsCooldownBody.hbs
@@ -19,6 +19,9 @@
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
                         <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
+                            <a data-action="show-quartz" title="Quartz Schedules">
+                                <span class='glyphicon glyphicon-question-sign'></span>
+                            </a>
                         </th>
                     {{/ifInSubFilter}}
 
