don't let sorting delete quartz help icon

--- a/SingularityUI/app/styles/requestsTasksTable.styl
+++ b/SingularityUI/app/styles/requestsTasksTable.styl
@@ -31,7 +31,7 @@
         z-index 500
         background #f3f3f3
 
-        span.glyphicon
+        span.glyphicon-chevron-up,span.glyphicon-chevron-down
             font-size 10px
             line-height 10px
             height 19px
