better styles for tooltip

--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -26,11 +26,13 @@
                     </th>
 
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
-                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl" title="All schedules are in quartz format unless specified otherwise">
-                            Schedule
-                            <a data-action="show-quartz" title="Quartz Schedules">
-                                <span class='glyphicon glyphicon-question-sign'></span>
-                            </a>
+                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl schedule-header">
+                            <span title="All schedules are in quartz format unless specified otherwise, click the ? icon for more info">
+                                Schedule
+                                <a data-action="show-quartz">
+                                    <span class='glyphicon glyphicon-question-sign'></span>
+                                </a>
+                            </span>
                         </th>
 
                     {{/ifInSubFilter}}
