--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -22,6 +22,9 @@
                         Memory
                     </th>
                     <th class="hidden-xs">
+                        {{! Warnings Column }}
+                    </th>
+                    <th class="hidden-xs">
                         {{! Actions column }}
                     </th>
                 </tr>
@@ -50,6 +53,13 @@
                     </td>
                     <td class="hidden-xs">
                         {{ memoryMb }} MB
+                    </td>
+                    <td>
+                        {{#if pendingTask.pendingTaskId}}
+                            {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
+                                <span class="btn btn-block btn-small btn-danger disabled">OVERDUE!</span>
+                            {{/ifTimestampInPast}}
+                        {{/if}}
                     </td>
                     <td class="actions-column hidden-xs">
                         <a data-task-id="{{ taskId.id }}" data-action="remove" title="Kill task">
