update ui element for overdue badge

--- a/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
@@ -12,9 +12,6 @@
                     Next run
                 </th>
                 <th class="hidden-xs">
-                    {{! Warnings Column }}
-                </th>
-                <th class="hidden-xs">
                     {{! Actions }}
                 </th>
             </tr>
@@ -27,10 +24,8 @@
                     </td>
                     <td data-value="{{ pendingTask.pendingTaskId.nextRunAt }}">
                         {{timestampFromNow pendingTask.pendingTaskId.nextRunAt}}
-                    </td>
-                    <td>
                         {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                            <span class="btn btn-block btn-small btn-danger disabled">OVERDUE!</span>
+                            <span class="label label-danger">OVERDUE!</span>
                         {{/ifTimestampInPast}}
                     </td>
                     <td class="hidden-xs actions-column">
