--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -22,9 +22,6 @@
                         Memory
                     </th>
                     <th class="hidden-xs">
-                        {{! Warnings Column }}
-                    </th>
-                    <th class="hidden-xs">
                         {{! Actions column }}
                     </th>
                 </tr>
@@ -57,7 +54,7 @@
                     <td>
                         {{#if pendingTask.pendingTaskId}}
                             {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                                <span class="btn btn-block btn-small btn-danger disabled">OVERDUE!</span>
+                                <span class="label label-danger">OVERDUE!</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
                     </td>
