--- a/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
@@ -33,7 +33,7 @@
                     <td>
                         {{#if pendingTask.pendingTaskId}}
                             {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                                <span class="btn btn-block btn-small btn-danger disabled">OVERDUE!</span>
+                                <span class="label label-danger">OVERDUE!</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
                     </td>
