--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -10,9 +10,6 @@
                         Next run
                     </th>
                     <th class="hidden-xs">
-                        {{! Warnings Column }}
-                    </th>
-                    <th class="hidden-xs">
                         {{! Actions column }}
                     </th>
                 </tr>
@@ -29,11 +26,9 @@
                     </td>
                     <td class="hidden-xs">
                         {{timestampFromNow pendingTask.pendingTaskId.nextRunAt}}
-                    </td>
-                    <td>
                         {{#if pendingTask.pendingTaskId}}
                             {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                                <span class="btn btn-block btn-small btn-danger disabled">OVERDUE!</span>
+                                <span class="label label-danger">OVERDUE!</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
                     </td>
