--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -54,7 +54,7 @@
                     <td>
                         {{#if pendingTask.pendingTaskId}}
                             {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                                <span class="label label-danger">OVERDUE!</span>
+                                <span class="label label-danger">OVERDUE</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
                     </td>
