--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -28,7 +28,7 @@
                         {{timestampFromNow pendingTask.pendingTaskId.nextRunAt}}
                         {{#if pendingTask.pendingTaskId}}
                             {{#ifTimestampInPast pendingTask.pendingTaskId.nextRunAt}}
-                                <span class="label label-danger">OVERDUE!</span>
+                                <span class="label label-danger">OVERDUE</span>
                             {{/ifTimestampInPast}}
                         {{/if}}
                     </td>
